# Incident-Triaging-Agentic-Framework

./: LICENSE  README.md  TODO.md  main.py  pyproject.toml  temperature_testing.py
data/incidents/commodity/: INCIDENT-002-commodity-price-feed-2025-12-03.md  INCIDENT-004-supplier-api-timeout-2026-02-18.md  INCIDENT-009-duplicate-purchase-order-2025-12-11.md.md  INCIDENT-010-futures-feed-failure-2026-01-22.md  INCIDENT-011-spot-market-weather-2026-02-01.md
data/incidents/demand/: INCIDENT-003-ml-forecast-regression-2025-11-23.md  INCIDENT-012-forecast-pipeline-delay-2026-02-14.md  INCIDENT-013-promo-stockout-2026-02-08.md  INCIDENT-014-regional-demand-anomaly-2026-01-18.md  INCIDENT-015-cascading-failure-2026-02-23.md
data/incidents/platform/: INCIDENT-001-inventory-sync-2026-01-14.md  INCIDENT-005-schema-migration-2026-01-15.md  INCIDENT-006-etl-failure-2026-01-28.md  INCIDENT-007-pos-feed-delay-2025-11-29.md  INCIDENT-008-warehouse-storage-2026-02-09.md
data/runbooks/commodity/: RUNBOOK-002-price-feed-failure.md  RUNBOOK-004-supplier-api-timeout.md  RUNBOOK-007-pos-data-feed-delay.md  RUNBOOK-010-futures-contract-feed-failure.md  RUNBOOK-011-spot-market-emergency-procurement.md
data/runbooks/demand/: RUNBOOK-003-ml-forecast-failure.md  RUNBOOK-006-etl-job-failure.md  RUNBOOK-008-data-warehouse-ingestion-failure.md  RUNBOOK-012-forecast-pipeline-delay.md  RUNBOOK-013-promotional-demand-spike.md  RUNBOOK-014-model-retrain-regression.md  RUNBOOK-015-regional-demand-anomaly.md
data/runbooks/platform/: RUNBOOK-001-inventory-sync.md  RUNBOOK-005-duplicate-purchase-order.md  RUNBOOK-006-etl-job-failure.md  RUNBOOK-009-schema-migration-failure.md
data/systems/: SYSTEM-inventory-management.md
docs/: evolution-log.md
scripts/: check_db.py  check_embeddings.py  check_langfuse.py  debug_chunker.py  debug_hybrid.py  ingest.py  run_retrieval_evals.py  test_agent.py  test_agent_traced.py  test_human_in_loop.py  test_retrieval.py
src/: main.py  temperature_testing.py
src/clients/: llm_client.py
src/config/: llm_config.py
src/incident_triage/agent/: edges.py  graph.py  nodes.py  state.py
src/incident_triage/clients/: llm_client.py
src/incident_triage/evals/: retrieval_evals.py
src/incident_triage/models/: incident_report.py
src/incident_triage/observability/: tracer.py
src/incident_triage/pipeline/: triage_pipeline.py
src/incident_triage/retrieval/: chunker.py  hybrid_search.py  ingestion.py  retriever.py  vector_store.py
src/models/: incident_report.py
